--- a/SVOBODAstyle.css
+++ b/SVOBODAstyle.css
@@ -26,10 +26,11 @@ h1 {
 h3 {
   position: relative;
   font-family: "GothamSSm-XLight";
-  font-size: 4em;
+  font-size: 3em;
   font-weight: 500;
   z-index: 2;
   margin: 0px;
+  padding: 3vh;
 }
 .hposition{
   top: 10%;
@@ -37,7 +38,7 @@ h3 {
 .flexim{
   display: flex;
 }
-.wtf{
+.backmovement{
  background-image: url("check/2.jpg");
  animation: move 30s linear infinite;
 }
@@ -45,7 +46,7 @@ h3 {
 .div__title {
   display: flex;
   min-height: 100vh;
-  padding: 8px 50px;
+
 
   background-color: rgb(211, 204, 204);
   background-image: url("background/0903.png");
@@ -56,55 +57,50 @@ h3 {
 .article {
   position: relative;
   min-height: 100vh;
-  padding: 0px 50px;
+
 }
-.article2 {
-  position: relative;
-  min-height: 100vh;
-  padding: 0px 50px;
-}
+
+
+
 .article_div{
-  display: flex;
-  position: relative;
-  min-height: 100vh;
  
-}
-.article_div2{
-  display: flex;
   position: relative;
   min-height: 100vh;
 
-  z-index: -1;
+  top: 10vh;
 }
 .title_svoboda {
   text-transform: uppercase;
   color: rgb(0, 0, 0);
   align-self: center;
   position: absolute;
-  top: 3px;
-  font-size: 3em;
+  top: 3vh;
+  font-size: 8em;
+  padding: 3vh;
 }
 .title_p {
   position: absolute;
   text-transform: uppercase;
   color: rgb(0, 0, 0);
   align-self: center;
-  top: -110px;
-  align-self: center;
-  top: 350px;
-  font-size: 27px;
+  top: 32vh;
+  right: 116vh;
+  font-size: 2em;
+  padding: 3vh;
 }
 .list {
   position: relative;
   font-size: 2em;
   font-weight: 300;
   z-index: 2;
+  list-style-type: none;
+  padding: 3vh;
 }
 .whight{
   color: rgb(255, 255, 255);
 }
 
 @keyframes move {
-  from { background-position: -1920px 100%, 0 0;}
+  from { background-position: -3840px 100%, 0 0;}
   to { background-position: 0 100%; }
 }
